fancy box included

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <title>AngularJS Email App</title>
     <link href="css/style.css" rel="stylesheet">
-    <link href="lib/jquery.fancybox.css_v=2.1.5.css" rel="stylesheet">
-    <script src="lib/jquery.fancybox.js_v=2.1.5"></script>
+        <script src="lib/jquery.min2.1.js"></script>
+        <script type="text/javascript">
+     
+</script>
+    <link href="lib/jquery.fancybox.css" rel="stylesheet">
+    <script src="lib/jquery.fancybox.js"></script>
     <style>
     [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
       display: all !important;
@@ -25,10 +29,12 @@
     <main class="main" role="main">
       <div ng-view class="flex"></div>
     </main>
-
+ <div id="inline1" style="width:400px;display: none;">
+    
+  </div>
 
     <!-- Vendor libraries -->
-    <script src="lib/jquery.min2.1.js"></script>
+
     <script src="lib/angular-v1.2.22.js"></script>
     <script src="lib/angular-route-v1.2.22.js"></script>
     <script src="lib/angular-sanitize-v1.2.22.js"></script>
