--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="EmailApp">
   <head>
     <meta charset="utf-8">
-    <title>AngularJS Email App</title>
+    <title>Esuits the Entrepreneurs club</title>
     <link href="css/style.css" rel="stylesheet">
     <link href='css/css.css' rel='stylesheet' type='text/css'>
     <link href="lib/jquery.fancybox.css" rel="stylesheet">
