google form added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <body>
     <header class="header" role="banner">
       <div class="header__text">
-        <p>Esuits Hyderabad: The leaders of tomorrow</p>
+      <a href="#/inbox" >
+        <p>Esuits Hyderabad: The leaders of tomorrow</p></a>
       </div>
     </header>
 
